[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Green_Related/GUIRelated_V3/Subs/Green_SinglePathSelectionGUI_V3/Green_SinglePathSelectionGUI_V3.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Green_Related/GUIRelated_V3/Green_WholeScreenGUI_MultipleSelection_V3.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 1 )

[node name="Green_WholeScreenGUI_MultipleSelection_V3" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 960, 540 )
mouse_filter = 2
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 25.0
margin_top = 93.0
margin_right = 935.0
margin_bottom = 446.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 885.0
margin_bottom = 328.0
mouse_filter = 2
custom_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_left = 352.0
margin_right = 508.0
margin_bottom = 23.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 1 )
text = "Choose a path"

[node name="SinglePathSelectionGUIContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 43.0
margin_right = 860.0
margin_bottom = 303.0
mouse_filter = 2
custom_constants/separation = 20

[node name="Green_SinglePathSelectionGUI_01" parent="MarginContainer/VBoxContainer/SinglePathSelectionGUIContainer" instance=ExtResource( 2 )]
margin_right = 200.0
margin_bottom = 260.0

[node name="Green_SinglePathSelectionGUI_02" parent="MarginContainer/VBoxContainer/SinglePathSelectionGUIContainer" instance=ExtResource( 2 )]
margin_left = 220.0
margin_right = 420.0
margin_bottom = 260.0

[node name="Green_SinglePathSelectionGUI_03" parent="MarginContainer/VBoxContainer/SinglePathSelectionGUIContainer" instance=ExtResource( 2 )]
margin_left = 440.0
margin_right = 640.0
margin_bottom = 260.0

[node name="Green_SinglePathSelectionGUI_04" parent="MarginContainer/VBoxContainer/SinglePathSelectionGUIContainer" instance=ExtResource( 2 )]
margin_left = 660.0
margin_right = 860.0
margin_bottom = 260.0
